Bug da documentaçao corrigido.
